[package]
name = "js-lib"
description = "Simple 'javascript-like' functions"
version = "0.0.2"
edition = "2021"
authors = ["Mitchell Rhys Hall"]
repository = "https://github.com/MitchellRhysHall/js_lib"
license = "MIT"
categories = [
    "asynchronous"
]
keywords = [
    "javascript",
    "functions",
    "fetch"
]
readme = "README.md"
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"